Fix java option and dns resolve wait